[package]
build = 'common/build/build.rs'
edition = '2021'
name = 'ton_executor'
version = '1.15.145'

[dependencies]
failure = '0.1.6'
lazy_static = '1.4.0'
log = '0.4'
ton_block = { git = 'https://github.com/tonlabs/ton-labs-block.git', tag = '1.9.14' }
ton_types = { git = 'https://github.com/tonlabs/ton-labs-types.git', tag = '1.12.4' }
ton_vm = { git = 'https://github.com/tonlabs/ton-labs-vm.git', tag = '1.8.89' }

wasmer = '3.1.0'
wasmer-compiler-singlepass = '3.1.0'
wasmer-middlewares = '3.1.0'

ed25519 = '1.2'
ed25519-dalek = '1.0'
